--- a/src/components/nav/scss/nav-tab.scss
+++ b/src/components/nav/scss/nav-tab.scss
@@ -6,8 +6,8 @@
     flex-direction: column;
     .nav-list { 
         width: 100%;
-        overflow: auto;
-        padding-bottom: 40px;
+        overflow-x: auto;
+        padding-bottom: 0px;
     }
     .nav-logo {
         width: 100%;
