--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,2 +1,9 @@
-$nav-width: 60px;
+$nav-width: 70px;
 $nav-fontSize: 1rem;
+$standard: 0.1s ease 0s;
+#root {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+}
